--- a/trabajo_e-commerce/index.html
+++ b/trabajo_e-commerce/index.html
@@ -1,126 +1,163 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistema de Ventas</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sistema de Ventas - Trabajo Final</title>
 
-  <!--  Bootstrap: librería para estilos y diseño responsivo -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!--  Archivo CSS propio para personalizar estilos -->
-  <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <link rel="stylesheet" href="css/styles.css"> 
 </head>
 
-<body class="bg-light"><!-- Fondo gris claro de Bootstrap -->
-  <div class="container mt-5"><!-- Contenedor principal con margen arriba -->
-    <h1 class="text-center mb-4">Sistema de Ventas</h1>
+<body class="bg-light">
 
-    <!-- ============================= -->
-    <!-- FORMULARIO DE NUEVA VENTA -->
-    <!-- ============================= -->
-    <div class="card mb-4 shadow-sm"><!-- Tarjeta con sombra -->
-      <div class="card-body">
-        <h4>Registrar nueva venta</h4>
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Sistema de Ventas</h1>
 
-        <!-- El formulario tiene id="ventaForm" para acceder desde JS -->
-        <form id="ventaForm" class="row g-3"><!-- "row g-3" → diseño en filas y separación -->
-          
-          <!-- Campo FECHA -->
-          <div class="col-md-3">
-            <label class="form-label">Fecha</label>
-            <input type="date" id="fecha" class="form-control" required>
-          </div>
+        <div class="card mb-4 shadow-sm">
+            <div class="card-body">
+                <h4>Registrar nueva venta</h4>
 
-          <!-- Campo CLIENTE -->
-          <div class="col-md-3">
-            <label class="form-label">Cliente</label>
-            <input type="text" id="cliente" class="form-control" placeholder="Nombre del cliente" required>
-          </div>
+                <form id="ventaForm" class="row g-3">
 
-          <!-- Campo PRODUCTO -->
-          <div class="col-md-3">
-            <label class="form-label">Producto</label>
-            <input type="text" id="producto" class="form-control" placeholder="Nombre del producto" required>
-          </div>
+                    <div class="col-md-3">
+                        <label class="form-label">Fecha</label>
+                        <input type="date" id="fecha" class="form-control" required>
+                    </div>
 
-          <!-- Campo CANTIDAD -->
-          <div class="col-md-2">
-            <label class="form-label">Cantidad</label>
-            <input type="number" id="cantidad" class="form-control" required>
-          </div>
+                    <div class="col-md-3">
+                        <label class="form-label">Cliente (Simulación ID)</label>
+                        <input type="text" id="cliente" class="form-control" required>
+                    </div>
 
-          <!-- Campo PRECIO UNITARIO -->
-          <div class="col-md-2">
-            <label class="form-label">Precio Unitario</label>
-            <input type="number" id="precioUnitario" class="form-control" required>
-          </div>
+                    <div class="col-md-3">
+                        <label class="form-label">Producto (Simulación ID)</label>
+                        <input type="text" id="producto" class="form-control" required>
+                    </div>
 
-          <!-- Campo MÉTODO DE PAGO -->
-          <div class="col-md-3">
-            <label class="form-label">Método de Pago</label>
-            <select id="metodoPago" class="form-select" required>
-              <option value="Efectivo">Efectivo</option>
-              <option value="Tarjeta">Tarjeta</option>
-              <option value="Transferencia">Transferencia</option>
-            </select>
-          </div>
+                    <div class="col-md-2">
+                        <label class="form-label">Cantidad</label>
+                        <input type="number" id="cantidad" class="form-control" min="1" required>
+                    </div>
 
-          <!-- Botón para enviar el formulario -->
-          <div class="col-12 text-end"><!-- "text-end" → alinea a la derecha -->
-            <button type="submit" class="btn btn-primary">Agregar venta</button>
-          </div>
+                    <div class="col-md-2">
+                        <label class="form-label">Precio Unitario</label>
+                        <input type="number" id="precioUnitario" class="form-control" step="0.01" min="0.01" required>
+                    </div>
 
-        </form>
-      </div>
+                    <div class="col-md-3">
+                        <label class="form-label">Método de Pago</label>
+                        <select id="metodoPago" class="form-select" required>
+                            <option>Efectivo</option>
+                            <option>Tarjeta</option>
+                            <option>Transferencia</option>
+                        </select>
+                    </div>
+
+                    <div class="col-12 text-end">
+                        <button type="submit" class="btn btn-primary">Agregar venta</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+
+        <div class="card shadow-sm mb-4">
+            <div class="card-body">
+                <h4>Ventas registradas</h4>
+
+                <table class="table table-striped mt-3" id="tablaVentas">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Fecha</th>
+                            <th>Cliente</th>
+                            <th>Producto</th>
+                            <th>Cantidad</th>
+                            <th>Precio Unitario</th>
+                            <th>Total</th>
+                            <th>Método de Pago</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+
+            </div>
+        </div>
+
+        <div class="card shadow-sm mb-4">
+            <div class="card-body">
+                <h4 class="mb-4">Estadísticas y Gráficos</h4>
+
+                <div class="row g-4 mb-4">
+                    <div class="col-md-3">
+                        <div class="card text-center shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Promedio Venta</h5>
+                                <p id="promedio" class="fs-4 fw-bold">—</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="card text-center shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Total Ventas</h5>
+                                <p id="total" class="fs-4 fw-bold">—</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="card text-center shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Desvío Estándar</h5>
+                                <p id="desviacion" class="fs-4 fw-bold">—</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="card text-center shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Correlación (Precio/Cant)</h5>
+                                <p id="correlacion" class="fs-4 fw-bold">—</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card shadow mb-4">
+                    <div class="card-body">
+                        <h5 class="text-center">Ventas por Producto</h5>
+                        <canvas id="graficoVentas"></canvas>
+                    </div>
+                </div>
+
+                <div class="card shadow mb-4">
+                    <div class="card-body">
+                        <h5 class="text-center">Ventas Totales por Día</h5>
+                        <canvas id="graficoFechas"></canvas>
+                    </div>
+                </div>
+
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h5 class="text-center">Gráfico de Dispersión (Precio Unitario vs. Cantidad Vendida)</h5>
+                        <canvas id="graficoDispersión"></canvas>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
-    <!-- ============================= -->
-    <!-- TABLA DE VENTAS REGISTRADAS -->
-    <!-- ============================= -->
-    <div class="card shadow-sm mb-4">
-      <div class="card-body">
-        <h4>Ventas registradas</h4>
-
-        <!-- La tabla mostrará todas las ventas cargadas -->
-        <table class="table table-striped mt-3" id="tablaVentas">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Fecha</th>
-              <th>Cliente</th>
-              <th>Producto</th>
-              <th>Cantidad</th>
-              <th>Precio Unitario</th>
-              <th>Total</th>
-              <th>Método de Pago</th>
-            </tr>
-          </thead>
-          <tbody></tbody><!-- Se completa dinámicamente desde main.js -->
-        </table>
-      </div>
-    </div>
-
-    <!-- ============================= -->
-    <!--  SECCIÓN DE ESTADÍSTICAS -->
-    <!-- ============================= -->
-    <div class="card shadow-sm">
-      <div class="card-body">
-        <h4>Estadísticas y Graficos</h4>
-
-        <!-- Aca irian los parrafos de los estadisticos y los graficos -->
-      </div>
-    </div>
-  </div>
-
-  <!-- ============================= -->
-  <!-- ARCHIVOS JAVASCRIPT -->
-  <!-- ============================= -->
-  <!-- main.js contiene la lógica principal (ventas, tabla, etc.) -->
-  <script src="js/main.js"></script>
-
-  <!-- stats.js calcula estadísticas (promedios, desvíos, etc.) -->
-  <script src="js/stats.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/stats.js"></script>
 
 </body>
 </html>
