--- a/trabajo_e-commerce/index.html
+++ b/trabajo_e-commerce/index.html
@@ -1,163 +1,188 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sistema de Ventas - Trabajo Final</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <link rel="stylesheet" href="css/styles.css"> 
-</head>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<body class="bg-light">
-
+  <body class="bg-light">
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Sistema de Ventas</h1>
+      <h1 class="text-center mb-4">Sistema de Ventas</h1>
 
-        <div class="card mb-4 shadow-sm">
-            <div class="card-body">
-                <h4>Registrar nueva venta</h4>
+      <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+          <h4>Registrar nueva venta</h4>
 
-                <form id="ventaForm" class="row g-3">
-
-                    <div class="col-md-3">
-                        <label class="form-label">Fecha</label>
-                        <input type="date" id="fecha" class="form-control" required>
-                    </div>
-
-                    <div class="col-md-3">
-                        <label class="form-label">Cliente (Simulación ID)</label>
-                        <input type="text" id="cliente" class="form-control" required>
-                    </div>
-
-                    <div class="col-md-3">
-                        <label class="form-label">Producto (Simulación ID)</label>
-                        <input type="text" id="producto" class="form-control" required>
-                    </div>
-
-                    <div class="col-md-2">
-                        <label class="form-label">Cantidad</label>
-                        <input type="number" id="cantidad" class="form-control" min="1" required>
-                    </div>
-
-                    <div class="col-md-2">
-                        <label class="form-label">Precio Unitario</label>
-                        <input type="number" id="precioUnitario" class="form-control" step="0.01" min="0.01" required>
-                    </div>
-
-                    <div class="col-md-3">
-                        <label class="form-label">Método de Pago</label>
-                        <select id="metodoPago" class="form-select" required>
-                            <option>Efectivo</option>
-                            <option>Tarjeta</option>
-                            <option>Transferencia</option>
-                        </select>
-                    </div>
-
-                    <div class="col-12 text-end">
-                        <button type="submit" class="btn btn-primary">Agregar venta</button>
-                    </div>
-
-                </form>
+          <form id="ventaForm" class="row g-3">
+            <div class="col-md-3">
+              <label class="form-label">Fecha</label>
+              <input type="date" id="fecha" class="form-control" required />
             </div>
-        </div>
 
-        <div class="card shadow-sm mb-4">
-            <div class="card-body">
-                <h4>Ventas registradas</h4>
-
-                <table class="table table-striped mt-3" id="tablaVentas">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Fecha</th>
-                            <th>Cliente</th>
-                            <th>Producto</th>
-                            <th>Cantidad</th>
-                            <th>Precio Unitario</th>
-                            <th>Total</th>
-                            <th>Método de Pago</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-
+            <div class="col-md-3">
+              <label class="form-label">Cliente</label>
+              <input type="text" id="cliente" class="form-control" required />
             </div>
-        </div>
 
-        <div class="card shadow-sm mb-4">
-            <div class="card-body">
-                <h4 class="mb-4">Estadísticas y Gráficos</h4>
-
-                <div class="row g-4 mb-4">
-                    <div class="col-md-3">
-                        <div class="card text-center shadow">
-                            <div class="card-body">
-                                <h5 class="card-title">Promedio Venta</h5>
-                                <p id="promedio" class="fs-4 fw-bold">—</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="card text-center shadow">
-                            <div class="card-body">
-                                <h5 class="card-title">Total Ventas</h5>
-                                <p id="total" class="fs-4 fw-bold">—</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="card text-center shadow">
-                            <div class="card-body">
-                                <h5 class="card-title">Desvío Estándar</h5>
-                                <p id="desviacion" class="fs-4 fw-bold">—</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="card text-center shadow">
-                            <div class="card-body">
-                                <h5 class="card-title">Correlación (Precio/Cant)</h5>
-                                <p id="correlacion" class="fs-4 fw-bold">—</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card shadow mb-4">
-                    <div class="card-body">
-                        <h5 class="text-center">Ventas por Producto</h5>
-                        <canvas id="graficoVentas"></canvas>
-                    </div>
-                </div>
-
-                <div class="card shadow mb-4">
-                    <div class="card-body">
-                        <h5 class="text-center">Ventas Totales por Día</h5>
-                        <canvas id="graficoFechas"></canvas>
-                    </div>
-                </div>
-
-                <div class="card shadow">
-                    <div class="card-body">
-                        <h5 class="text-center">Gráfico de Dispersión (Precio Unitario vs. Cantidad Vendida)</h5>
-                        <canvas id="graficoDispersión"></canvas>
-                    </div>
-                </div>
-
+            <div class="col-md-3">
+              <label class="form-label">Producto</label>
+              <select id="producto" class="form-select" required>
+                <option value="">Seleccionar producto</option>
+                <option>Parlantes</option>
+                <option>Auriculares</option>
+                <option>Mouse</option>
+                <option>Teclado </option>
+                <option>Monitor</option>
+                <option>Notebook</option>
+                <option>TV</option>
+                <option>Tablet</option>
+                <option>Impresora</option>
+                <option>Cámara</option>
+              </select>
             </div>
-        </div>
 
+            <div class="col-md-2">
+              <label class="form-label">Cantidad</label>
+              <input
+                type="number"
+                id="cantidad"
+                class="form-control"
+                min="1"
+                required
+              />
+            </div>
+
+            <div class="col-md-2">
+              <label class="form-label">Precio Unitario</label>
+              <input
+                type="number"
+                id="precioUnitario"
+                class="form-control"
+                step="0.01"
+                min="0.01"
+                required
+              />
+            </div>
+
+            <div class="col-md-3">
+              <label class="form-label">Método de Pago</label>
+              <select id="metodoPago" class="form-select" required>
+                <option>Efectivo</option>
+                <option>Tarjeta</option>
+                <option>Transferencia</option>
+              </select>
+            </div>
+
+            <div class="col-12 text-end">
+              <button type="submit" class="btn btn-primary">
+                Agregar venta
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <div class="card shadow-sm mb-4">
+        <div class="card-body">
+          <h4>Ventas registradas</h4>
+
+          <table class="table table-striped mt-3" id="tablaVentas">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Fecha</th>
+                <th>Cliente</th>
+                <th>Producto</th>
+                <th>Cantidad</th>
+                <th>Precio Unitario</th>
+                <th>Total</th>
+                <th>Método de Pago</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="card shadow-sm mb-4">
+        <div class="card-body">
+          <h4 class="mb-4">Estadísticas y Gráficos</h4>
+
+          <div class="row g-4 mb-4">
+            <div class="col-md-3">
+              <div class="card text-center shadow">
+                <div class="card-body">
+                  <h5 class="card-title">Promedio Venta</h5>
+                  <p id="promedio" class="fs-4 fw-bold">—</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3">
+              <div class="card text-center shadow">
+                <div class="card-body">
+                  <h5 class="card-title">Total Ventas</h5>
+                  <p id="total" class="fs-4 fw-bold">—</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3">
+              <div class="card text-center shadow">
+                <div class="card-body">
+                  <h5 class="card-title">Desvío Estándar de Ventas</h5>
+                  <p id="desviacion" class="fs-4 fw-bold">—</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3">
+              <div class="card text-center shadow">
+                <div class="card-body">
+                  <h5 class="card-title">Correlación (Precio/Cant)</h5>
+                  <p id="correlacion" class="fs-4 fw-bold">—</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card shadow mb-4">
+            <div class="card-body">
+              <h5 class="text-center">Ventas por Producto</h5>
+              <canvas id="graficoVentas"></canvas>
+            </div>
+          </div>
+
+          <div class="card shadow mb-4">
+            <div class="card-body">
+              <h5 class="text-center">Ventas Totales por Día</h5>
+              <canvas id="graficoFechas"></canvas>
+            </div>
+          </div>
+
+          <div class="card shadow">
+            <div class="card-body">
+              <h5 class="text-center">
+                Gráfico de Dispersión (Precio Unitario vs. Cantidad Vendida)
+              </h5>
+              <canvas id="graficoDispersión"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="js/main.js"></script>
     <script src="js/stats.js"></script>
-
-</body>
+  </body>
 </html>
